# verdi-runtime

./: .travis-ci.sh  README.md  _tags  opam  verdi-runtime.opam
.github/workflows/: docker-action.yml
pkg/: META  pkg.ml
src/: Daemon.ml  Daemon.mli  DebugShim.ml  DebugShim.mli  DiskOpShim.ml  DiskOpShim.mli  DisklessShim.ml  DynamicShim.ml  DynamicShim.mli  Opts.ml  OrderedShim.ml  OrderedShim.mli  Shim.ml  Shim.mli  UnorderedShim.ml  UnorderedShim.mli  Util.ml  Util.mli  verdi_runtime.mllib
