opam-version: "2.0"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/DistributedComponents/verdi-runtime"
dev-repo: "git+https://github.com/DistributedComponents/verdi-runtime.git"
bug-reports: "https://github.com/DistributedComponents/verdi-runtime/issues"
license: "BSD-2-Clause"
synopsis: "Verdi framework runtime library"

build: [ "ocaml" "pkg/pkg.ml" "build" "--pinned" "%{pinned}%" ]
depends: [
  "ocaml" {>= "4.02.3"}
  "yojson" {<= "1.7.0"}
  "base64" {>= "3.0.0"}
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "topkg" {build}
  "cheerios-runtime" {= "dev"}
]

authors: [
  "James R. Wilcox"
  "Doug Woos"
  "Steve Anton"
  "Karl Palmskog"
  "Ryan Doenges"
  "Justin Adsuara"
]
